catkin_ws/logs/backend/build.make.192.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp: In constructor ‘SLAM::SURF::SURF(float, int, int)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:20:2: error: ‘cout’ was not declared in this scope
  cout << "hessian threshold now is " << detecterExtracter.getHessianThreshold() <<endl;  
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:20:2: note: suggested alternative:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:8:0:
/usr/include/c++/4.8/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:20:59: error: ‘struct cv::Ptr<cv::xfeatures2d::SURF>’ has no member named ‘getHessianThreshold’
  cout << "hessian threshold now is " << detecterExtracter.getHessianThreshold() <<endl;  
                                                           ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:20:83: error: ‘endl’ was not declared in this scope
  cout << "hessian threshold now is " << detecterExtracter.getHessianThreshold() <<endl;  
                                                                                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:20:83: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:8:
/usr/include/c++/4.8/ostream:564:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
make[2]: *** [CMakeFiles/frontend.dir/src/SURF.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
